--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,11 @@ project(se)
 
 set(CMAKE_C_STANDARD 99)
 
+if(NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Release)
+endif()
+set(CMAKE_C_FLAGS_RELEASE "-O3")
+
 set(SOURCE_FILES forward_types.h rope.h rope.c util.h util.c vector.h vector.c buf.h buf.c stack.c stack.h
         circular_buffer.c circular_buffer.h editor_buffer.h editor_buffer.c)
 
