no more leaks :)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,9 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 
 set(CMAKE_C_FLAGS_RELEASE "-O3")
-#set(CMAKE_C_FLAGS_RELEASE "-O0")
+set(CMAKE_C_FLAGS_DEBUG "-g -O0")
+
+set(CMAKE_BUILD_TYPE Debug)
 
 set(SOURCE_FILES forward_types.h rope.h rope.c util.h util.c vector.h vector.c buf.h buf.c stack.c stack.h
         circular_buffer.c circular_buffer.h editor_buffer.h editor_buffer.c line_rope.h line_rope.c)
