--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ set(CMAKE_C_FLAGS_RELEASE "-O3")
 set(CMAKE_BUILD_TYPE Release)
 
 set(SOURCE_FILES forward_types.h rope.h rope.c util.h util.c vector.h vector.c buf.h buf.c stack.c stack.h
-        circular_buffer.c circular_buffer.h editor_buffer.h editor_buffer.c line_rope.h line_rope.c)
+        circular_buffer.c circular_buffer.h editor_buffer.h editor_buffer.c line_rope.h line_rope.c directory_search.h directory_search.c)
 
 add_executable(se_test main.c ${SOURCE_FILES})
 
